<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
<!--    <string name="dicoding_event">Dicoding Event</string>-->
    <string name="upcoming_event">Upcoming Event</string>
    <string name="finished_event">Finished Event</string>
    <string name="subtitle_upcoming">Recommendation event for you</string>
    <string name="subtitle_finished">Finished Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_summary">Summary</string>
    <string name="event_description">Description</string>
    <string name="register">Register</string>
    <string name="owner_name">Owner Name</string>
    <string name="tt_quota">Quota</string>
    <string name="quota_remaining">Quota Remainning</string>
    <string name="tt_begin_time">Begin Time</string>
    <string name="begin_time">Begin Time</string>
    <string name="information">Information : </string>
    <string name="media_cover">Media Cover</string>
    <string name="image_logo">Image Logo</string>
    <string name="title_favorite">Favorite</string>
    <string name="save_favorite">Save Favorite</string>
    <string name="title_setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="enable_theme">Enable theme</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="favorite_event">Favorite Event</string>

</resources>