<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.dicodingevent.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_upcoming"
            app:destination="@id/navigation_upcoming" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_finished"
            app:destination="@id/navigation_finished" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.dicoding.dicodingevent.fragments.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming_event" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.dicoding.dicodingevent.fragments.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished_event" />
</navigation>