<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_favorite"
    android:layout_width="170dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="2dp"
    card_view:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="170dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_event_photo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:scaleType="fitXY"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/image_logo"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_event_photo"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="14sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/img_event_photo"
            card_view:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/event_name" />

        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/save_favorite"
            android:src="@drawable/baseline_favorite_border_24"
            card_view:layout_constraintEnd_toEndOf="@id/img_event_photo"
            card_view:layout_constraintTop_toTopOf="@+id/img_event_photo"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>